Make AuthScheme generic with builder, minor package refactors included